--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <a class="brand" href="#top">
         <div class="logo">ML</div>
         <div>
-          <div style="font-weight:700">Nif Rebel — ML/AI Engineer</div>
+          <div style="font-weight:700">MD. NAIMUL ISLAM — ML/AI Engineer</div>
           <div style="font-size:0.82rem;color:var(--muted)">Computer Vision • Predictive Modeling • Production ML</div>
         </div>
       </a>
